--- a/gen/dirname.3
+++ b/gen/dirname.3
@@ -24,7 +24,7 @@
 .\" OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
 .\" ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $OpenBSD: dirname.3,v 1.9 2000/04/18 03:01:25 aaron Exp $
+.\" $OpenBSD: dirname.3,v 1.10 2000/12/24 00:30:47 aaron Exp $
 .\"
 .Dd August 17, 1997
 .Dt DIRNAME 3
@@ -100,5 +100,5 @@ The
 .Fn dirname
 function first appeared in
 .Ox 2.2 .
-.Sh AUTHOR
+.Sh AUTHORS
 Todd C. Miller <Todd.Miller@courtesan.com>
