--- a/gen/exec.3
+++ b/gen/exec.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: exec.3,v 1.11 2000/08/31 16:24:38 deraadt Exp $
+.\"	$OpenBSD: exec.3,v 1.12 2001/03/14 04:02:00 aaron Exp $
 .\"
 .\" Copyright (c) 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -165,7 +165,6 @@ returned
 .Er ETXTBUSY ) ,
 these functions will sleep for several seconds,
 periodically re-attempting to execute the file.
-.Pp
 .Sh RETURN VALUES
 If any of the
 .Xr exec
