--- a/gen/readpassphrase.3
+++ b/gen/readpassphrase.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: readpassphrase.3,v 1.1 2000/11/21 00:48:37 millert Exp $
+.\"	$OpenBSD: readpassphrase.3,v 1.2 2000/12/24 00:30:50 aaron Exp $
 .\"
 .\" Copyright (c) 2000 Todd C. Miller <Todd.Miller@courtesan.com>
 .\" All rights reserved.
@@ -103,6 +103,7 @@ if (compare(transform(passbuf), epass) != 0)
 \&...
 
 memset(passbuf, 0, sizeof(passbuf));
+.Ed
 .Sh FILES
 .Bl -tag -width /dev/tty -compact
 .It Pa /dev/tty
