--- a/gen/sysctl.3
+++ b/gen/sysctl.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sysctl.3,v 1.70 2001/06/03 04:43:21 angelos Exp $
+.\"	$OpenBSD: sysctl.3,v 1.71 2001/07/05 08:51:25 jjbg Exp $
 .\"
 .\" Copyright (c) 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -1379,7 +1379,7 @@ Some filesystems may contain settings.
 .It Dv NFS_NIOTHREADS No "	int	yes"
 .El
 .El
-.Pp
+.El
 .Sh RETURN VALUES
 If the call to
 .Fn sysctl
