--- a/sys/getsockname.2
+++ b/sys/getsockname.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: getsockname.2,v 1.14 2000/10/18 05:12:09 aaron Exp $
+.\"	$OpenBSD: getsockname.2,v 1.15 2001/06/26 19:56:52 dugsong Exp $
 .\"	$NetBSD: getsockname.2,v 1.6 1995/10/12 15:41:00 jtc Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
@@ -113,7 +113,6 @@ does not point to enough space to hold the entire socket address, the
 result will be truncated to
 .Fa namelen
 bytes.
-.Pp
 .Sh RETURN VALUES
 On success,
 .Fn getsockname
