--- a/sys/sigaction.2
+++ b/sys/sigaction.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sigaction.2,v 1.26 2001/01/17 19:20:06 deraadt Exp $
+.\"	$OpenBSD: sigaction.2,v 1.27 2001/03/11 05:02:30 aaron Exp $
 .\"	$NetBSD: sigaction.2,v 1.7 1995/10/12 15:41:16 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
@@ -459,7 +459,6 @@ handler(sig)
 	errno = save_errno;
 }
 .Ed
-.Pp
 .Sh RETURN VALUES
 A 0 value indicates that the call succeeded.
 A \-1 return value indicates an error occurred and
