--- a/gen/pw_dup.3
+++ b/gen/pw_dup.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pw_dup.3,v 1.1 2000/11/21 00:49:58 millert Exp $
+.\"	$OpenBSD: pw_dup.3,v 1.2 2000/12/24 00:30:50 aaron Exp $
 .\"
 .\" Copyright (c) 2000 Todd C. Miller <Todd.Miller@courtesan.com>
 .\" All rights reserved.
@@ -34,7 +34,7 @@
 .Sh SYNOPSIS
 .Fd #include <pwd.h>
 .Ft struct passwd *
-.Fn pw_dup "cost struct passwd *pw"
+.Fn pw_dup "const struct passwd *pw"
 .Sh DESCRIPTION
 The
 .Fn pw_dup
