--- a/sys/getdirentries.2
+++ b/sys/getdirentries.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: getdirentries.2,v 1.10 2001/07/31 05:45:33 art Exp $
+.\"	$OpenBSD: getdirentries.2,v 1.11 2002/08/06 18:45:03 aaron Exp $
 .\"	$NetBSD: getdirentries.2,v 1.7 1995/10/12 15:40:50 jtc Exp $
 .\"
 .\" Copyright (c) 1989, 1991, 1993
@@ -57,9 +57,8 @@ Up to
 of data will be transferred.
 .Fa nbytes
 must be greater than or equal to the
-block size associated with the file,
-see
-.Xr stat 2 .
+block size associated with the file (see
+.Xr stat 2 ) .
 Some filesystems may not support
 .Fn getdirentries
 with buffers smaller than this size.
@@ -143,7 +142,7 @@ Either
 .Fa buf
 or
 .Fa basep
-point outside the allocated address space.
+points outside the allocated address space.
 .It Bq Er EINVAL
 The file referenced by
 .Fa fd
