--- a/sys/setuid.2
+++ b/sys/setuid.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: setuid.2,v 1.11 2002/01/24 21:18:36 mickey Exp $
+.\"	$OpenBSD: setuid.2,v 1.12 2002/06/27 19:01:11 stevesk Exp $
 .\"	$NetBSD: setuid.2,v 1.3 1995/02/27 12:37:06 cgd Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
@@ -107,6 +107,7 @@ these functions return \-1.
 .Xr getuid 2 ,
 .Xr issetugid 2 ,
 .Xr setgroups 2
+.Pp
 A
 .Fn setuid
 function appeared in
