--- a/compat-43/sigvec.3
+++ b/compat-43/sigvec.3
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	$OpenBSD: sigvec.3,v 1.18 2000/12/15 14:31:19 aaron Exp $
+.\"	$OpenBSD: sigvec.3,v 1.19 2002/04/30 16:31:42 mpech Exp $
 .\"
 .Dd April 29, 1991
 .Dt SIGVEC 3
@@ -317,7 +317,7 @@ For an example of signal handler declarations, see
 .Xr ptrace 2 ,
 .Xr sigaction 2 ,
 .Xr sigaltstack 2 ,
-.Xr sigpause 2 ,
+.Xr sigpause 3 ,
 .Xr sigprocmask 2 ,
 .Xr sigstack 2 ,
 .Xr sigsuspend 2 ,
